--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
   </head>
   <body>
     <div class="container">
-      <div class="row">
+      <div class="row pt-5">
         <div class="row col-md-4 mx-auto">
-          <button class="btn btn-lg-btn-primary">Get Location</button>
+          <button class="btn btn-lg btn-primary">Get Location</button>
+          <hr />
+          <h2 class="location">Location:</h2>
         </div>
       </div>
     </div>
